--- a/tables/randoopvsBeapi.tex
+++ b/tables/randoopvsBeapi.tex
@@ -33,6 +33,7 @@
 &	BEAPI & - & - & - & -	& 82 &	89 \\
 \midrule
 \end{tabular}
+\label{tab:hashSetTools}
 \caption{Comparativa de diferentes tecnicas en HashSet}
 \end{table}
 
@@ -72,6 +73,7 @@
 	&	BEAPI	&	72	&	-	&	5616	&	2	&	150	&	109	\\
 \midrule
 \end{tabular}
+\label{tab:treeSetTools}
 \caption{Comparativa de diferentes tecnicas en TreeSet}
 \end{table}
 
@@ -109,6 +111,7 @@
 	&	BEAPI	&		&		&	3119116	&	15	&	173	&	140	\\
 \midrule
 \end{tabular}
+\label{tab:treeMapTools}
 \caption{Comparativa de diferentes tecnicas en TreeMap}
 \end{table}
 
@@ -146,6 +149,7 @@
 	&	BEAPI	&		&	-	&	305375	&	3	&	49	&	56	\\
 \midrule
 \end{tabular}
+\label{tab:linkedListTools}
 \caption{Comparativa de diferentes tecnicas en LinkedList}
 \end{table}
 
@@ -183,5 +187,6 @@
 	&	BEAPI	&	10453	&	?	&	2142873		9	&	122	&	120		\\
 \midrule
 \end{tabular}
+\label{tab:hashMapTools}
 \caption{Comparativa de diferentes tecnicas en HashMap}
 \end{table}
