--- a/tables/randoopvsBeapi.tex
+++ b/tables/randoopvsBeapi.tex
@@ -7,17 +7,17 @@
   \textbf{GTime} & \textbf{Tool} & \textbf{Valid}  & \textbf{Invalid} & \textbf{Test}&\textbf{T(Seg)} &\textbf{Ramas}  & \textbf{Mutacion} \\ 
   \midrule
 5	&	Randoop	&	-	&	- & 380 & 4	& 53 & 67 \\
-& R-Serialize	& 3851 & 264 & 184852 & 4	& 82 &	89 	\\
+& R-Serialize	& 3851 & 264 & 184852 & 4	& 72 &	79 	\\
 & R-Builders		& 12812 & 9008 & 614980 & 20 &	82	& 89  \\
 &	BEAPI & 32 & - & 1540 & 2	& 82 & 89 \\
 \cline{2-8}
 10	&	Randoop	&	-	&	- & 380 & 4	& 67 & 67 \\
-& R-Serialize	& 7655 & 532 & 367444 & 6	& 82 &	89 	\\
+& R-Serialize	& 7655 & 532 & 367444 & 6	& 75 &	81 	\\
 & R-Builders		& 23320 & 16482 & 1119364 & 35 &	82	& 89  \\
 &	BEAPI & 32 & - & 1540 & 2	& 82 & 89 \\
 \cline{2-8}
 20	&	Randoop	&	-	&	- & 380 & 4	& 73 & 85 \\
-& R-Serialize	& 14980 & 1015 & 719044 & 8	& 82 &	89 	\\
+& R-Serialize	& 14980 & 1015 & 719044 & 8	& 76 &	83 	\\
 & R-Builders		& 38047 & 26904 & 1826260 & 55 &	82	& 89  \\
 &	BEAPI & 32 & - & 1540 & 2	& 82 & 89 \\
 
@@ -30,7 +30,7 @@
 150	&	Randoop	&	-	&	- & 12452 & 29	& 81 & 89\\
 & R-Serialize	& 97236 & 7088 & 4667332 & 35	& 82 &	89 	\\
 & R-Builders		& 125992 & 89292 & 6047620 & 179 & 82 &	89  \\
-&	BEAPI & - & - & - & -	& 82 &	89 \\
+&	BEAPI & 32 & - & 1540 & 2	& 82 &	89 \\
 \midrule
 \end{tabular}
 \label{tab:hashSetTools}
