Algunas revisiones a la seccion de builders

--- a/main.tex
+++ b/main.tex
@@ -82,6 +82,7 @@
 % \usepackage{algorithmic}
 \usepackage{pgfplots}
 \usepackage[linesnumbered,ruled,vlined,spanish,onelanguage]{algorithm2e}
+\newcommand{\pp}[1]{{\color{blue}\bf [PP: #1]}}
 
 \lstnewenvironment{algorithm1}[1][] %defines the algorithm listing environment
 {   
